<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cst.aaron.bluetoothtest.MainActivity"
    android:background="@drawable/road_next" >
    <ImageView
          android:id="@+id/logo_img"
          android:layout_width="50dp"
          android:layout_height="40dp"
          android:layout_alignTop="@+id/connect_label"
          android:layout_centerHorizontal="true"
          android:layout_margin="10dp"
          android:contentDescription="@string/logo_cst"
          android:src="@drawable/logo_cst" />
     <TextView
        android:id="@+id/connect_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnected_label" 
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
     
     <ImageView 
         android:id="@+id/signal_img"
         android:layout_height="250dp"
         android:layout_width="125dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/signal_img_description"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:src="@drawable/none"
       
         />
     <TextView 
         android:id="@+id/signal_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/connect_label"
         android:textSize="40sp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:padding="15dp"
         />
      <LinearLayout
          android:id="@+id/direction_linear"
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:layout_below="@id/signal_img"
          android:orientation="horizontal">
          
          <ImageView 
              android:id="@+id/direction_left"
              android:layout_width="75dp"
              android:layout_height="75dp"
              android:padding="10dp"
              android:src="@drawable/left"
              android:contentDescription="@string/direction_left"
              android:visibility="visible"
 	         />
          <ImageView 
              android:id="@+id/direction_straight"
              android:layout_width="75dp"
              android:layout_height="75dp"
              android:padding="10dp"
              android:src="@drawable/straight"
              android:contentDescription="@string/direction_straight"
              android:visibility="visible"
              />
          <ImageView 
              android:id="@+id/direction_right"
              android:layout_width="75dp"
              android:layout_height="75dp"
              android:padding="10dp"
              android:src="@drawable/right"
              android:contentDescription="@string/direction_right"
              android:visibility="visible"
              />
          </LinearLayout>


          
</RelativeLayout>
